# cronofactura

./: .gitignore  LICENSE  README.md  iniciar.bat  iniciar.sh  initialize_project.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
facturacion_app/src/: __init__.py  main.py  test_integration.py
facturacion_app/src/controllers/: client_controller.py  invoice_controller.py  time_controller.py
facturacion_app/src/database/: db_manager.py
facturacion_app/src/models/: client.py  invoice.py  time_log.py
facturacion_app/src/utils/: excel_exporter.py  pdf_generator.py  update_manager.py
facturacion_app/src/views/: clients_view.py  dashboard_view.py  date_picker.py  history_view.py  main_window.py  settings_view.py  time_view.py  update_dialogs.py
facturacion_app/templates/: invoice_style.css  invoice_template.html  report_style.css  report_template.html
facturas_emitidas/: .gitkeep
