[project]
name = "gestion-tiempo-y-facturas"
version = "0.1.2"
description = "Aplicación de escritorio para la gestión de tiempo de trabajo y generación automática de facturas en PDF."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "David Ramos Rodríguez"}
]
dependencies = [
    "customtkinter>=5.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "xhtml2pdf>=0.2.11"
]
